# eeg_research_app

./: .gitignore  AGENTS.md  README.md  conftest.py  diagnose_artifact.py  native_raw_dump.py  native_stream_check.py  pyproject.toml  requirements.txt  smoke_test.py
.github/workflows/: build-executables.yml
docs/: ARCHITECTURE.md  EXTENDING.md
ganglion_studio/: __init__.py  main.py  palette.py
ganglion_studio/core/: __init__.py  analysis.py  ble_scanner.py  board_config.py  board_manager.py  dsp.py  exporter.py  native_ganglion.py  processing.py  pulse_diagnostics.py  recording_loader.py  saved_devices.py  serial_ports.py  session.py
ganglion_studio/ui/: __init__.py  analysis_window.py  channel_setup_dialog.py  dashboard.py  main_window.py  processing_window.py  review_window.py  session_view.py  theme.py
ganglion_studio/ui/panels/: __init__.py
ganglion_studio/ui/plots/: __init__.py  impedance_widget.py  psd_widget.py  pulse_diagnostics_widget.py  time_series_widget.py
ganglion_studio/ui/widgets/: __init__.py  accel_widget.py  band_power_widget.py  channel_panel.py  filter_panel.py  impedance_widget.py  marker_panel.py  psd_widget.py  spectrogram_widget.py  stats_panel.py  time_series.py
tests/: test_ble_scanner.py  test_constants.py  test_dsp.py  test_exporter.py  test_impedance.py  test_native_decode.py  test_packet_loss.py  test_palette.py  test_pulse_diagnostics.py  test_ring_buffer.py  test_saved_devices.py  test_serial_ports.py
tools/: diagnose_artifact.py  native_raw_dump.py  native_stream_check.py
